네트워크 설정 파일, 네트워크 설정 자동화 및 체인코드 배포 자동화 스크립트

--- a/configtx.yaml
+++ b/configtx.yaml
@@ -90,6 +90,9 @@ Application: &ApplicationDefaults
         Admins:
             Type: ImplicitMeta
             Rule: "MAJORITY Admins"
+        Endorsement:
+            Type: ImplicitMeta
+            Rule: "ANY Endorsement"
     Capabilities:
         <<: *ApplicationCapabilities
 
@@ -137,6 +140,9 @@ Channel: &ChannelDefaults
         Admins:
             Type: ImplicitMeta
             Rule: "MAJORITY Admins"
+        Endorsement:
+            Type: ImplicitMeta
+            Rule: "ANY Endorsement"
     Capabilities:
         <<: *ChannelCapabilities
 
