--- a/crypto-config.yaml
+++ b/crypto-config.yaml
@@ -7,18 +7,21 @@ OrdererOrgs:
 PeerOrgs:
   - Name: Org1
     Domain: org1.data-collector.com
+    EnableNodeOUs: true
     Template:
       Count: 2
     Users:
       Count: 1
   - Name: Org2
     Domain: org2.data-collector.com
+    EnableNodeOUs: true
     Template:
       Count: 2
     Users:
       Count: 1
   - Name: Org3
     Domain: org3.data-collector.com
+    EnableNodeOUs: true
     Template:
       Count: 2
     Users:
