--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: orderer.data-collector.com  # 컨테이너 이름 설정
     image: hyperledger/fabric-orderer:latest  # 사용할 도커 이미지 설정
     environment:  # Orderer 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - ORDERER_GENERAL_LOGLEVEL=info  # 로그 레벨 설정
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0  # Orderer가 바인딩할 주소
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=file  # 부트스트랩 방식 설정 (파일)
@@ -29,6 +30,7 @@ services:  # Docker Compose의 서비스 정의 시작
   ca.org1.data-collector.com:  # Org1의 CA 서비스 정의
     image: hyperledger/fabric-ca:latest  # 사용할 도커 이미지 설정
     environment:  # CA 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server  # CA 서버 홈 디렉터리 설정
       - FABRIC_CA_SERVER_CA_NAME=ca-org1  # CA 서버 이름 설정
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.data-collector.com-cert.pem
@@ -48,6 +50,7 @@ services:  # Docker Compose의 서비스 정의 시작
   ca.org2.data-collector.com:  # Org2의 CA 서비스 정의
     image: hyperledger/fabric-ca:latest  # 사용할 도커 이미지 설정
     environment:  # CA 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server  # CA 서버 홈 디렉터리 설정
       - FABRIC_CA_SERVER_CA_NAME=ca-org2  # CA 서버 이름 설정
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.data-collector.com-cert.pem
@@ -67,6 +70,7 @@ services:  # Docker Compose의 서비스 정의 시작
   ca.org3.data-collector.com:  # Org3의 CA 서비스 정의
     image: hyperledger/fabric-ca:latest  # 사용할 도커 이미지 설정
     environment:  # CA 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server  # CA 서버 홈 디렉터리 설정
       - FABRIC_CA_SERVER_CA_NAME=ca-org3  # CA 서버 이름 설정
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.data-collector.com-cert.pem
@@ -87,6 +91,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer0.org1.data-collector.com # peer0 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer0 컨테이너에 사용할 이미지
     environment: # peer0 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer0.org1.data-collector.com # peer0의 ID 설정
       - CORE_PEER_ADDRESS=peer0.org1.data-collector.com:7051 # peer0의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:7051 # peer0의 리슨 주소 설정
@@ -101,6 +106,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org1.data-collector.com/peers/peer0.org1.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org1.data-collector.com/peers/peer0.org1.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer0.org1.data-collector.com:/var/hyperledger/production # peer0 데이터 볼륨
@@ -114,6 +120,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer1.org1.data-collector.com # peer1 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer1 컨테이너에 사용할 이미지
     environment: # peer1 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer1.org1.data-collector.com # peer1의 ID 설정
       - CORE_PEER_ADDRESS=peer1.org1.data-collector.com:8051 # peer1의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:8051 # peer1의 리슨 주소 설정
@@ -128,6 +135,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org1.data-collector.com/peers/peer1.org1.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org1.data-collector.com/peers/peer1.org1.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer1.org1.data-collector.com:/var/hyperledger/production # peer1 데이터 볼륨
@@ -141,6 +149,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer0.org2.data-collector.com # peer0 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer0 컨테이너에 사용할 이미지
     environment: # peer0 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer0.org2.data-collector.com # peer0의 ID 설정
       - CORE_PEER_ADDRESS=peer0.org2.data-collector.com:9051 # peer0의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:9051 # peer0의 리슨 주소 설정
@@ -155,6 +164,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org2.data-collector.com/peers/peer0.org2.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org2.data-collector.com/peers/peer0.org2.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer0.org2.data-collector.com:/var/hyperledger/production # peer0 데이터 볼륨
@@ -168,6 +178,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer1.org2.data-collector.com # peer1 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer1 컨테이너에 사용할 이미지
     environment: # peer1 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer1.org2.data-collector.com # peer1의 ID 설정
       - CORE_PEER_ADDRESS=peer1.org2.data-collector.com:10051 # peer1의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:10051 # peer1의 리슨 주소 설정
@@ -182,6 +193,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org2.data-collector.com/peers/peer1.org2.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org2.data-collector.com/peers/peer1.org2.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer1.org2.data-collector.com:/var/hyperledger/production # peer1 데이터 볼륨
@@ -195,6 +207,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer0.org3.data-collector.com # peer0 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer0 컨테이너에 사용할 이미지
     environment: # peer0 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer0.org3.data-collector.com # peer0의 ID 설정
       - CORE_PEER_ADDRESS=peer0.org3.data-collector.com:11051 # peer0의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:11051 # peer0의 리슨 주소 설정
@@ -209,6 +222,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org3.data-collector.com/peers/peer0.org3.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org3.data-collector.com/peers/peer0.org3.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer0.org3.data-collector.com:/var/hyperledger/production # peer0 데이터 볼륨
@@ -222,6 +236,7 @@ services:  # Docker Compose의 서비스 정의 시작
     container_name: peer1.org3.data-collector.com # peer1 컨테이너 이름
     image: hyperledger/fabric-peer:latest # peer1 컨테이너에 사용할 이미지
     environment: # peer1 컨테이너의 환경 변수 설정
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - CORE_PEER_ID=peer1.org3.data-collector.com # peer1의 ID 설정
       - CORE_PEER_ADDRESS=peer1.org3.data-collector.com:12051 # peer1의 주소 설정
       - CORE_PEER_LISTENADDRESS=0.0.0.0:12051 # peer1의 리슨 주소 설정
@@ -236,6 +251,7 @@ services:  # Docker Compose의 서비스 정의 시작
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key # TLS 키 파일 경로
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt # TLS 루트 인증서 파일 경로
     volumes: # 호스트와 컨테이너 간의 볼륨 설정
+        - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/org3.data-collector.com/peers/peer1.org3.data-collector.com/msp:/etc/hyperledger/fabric/msp # MSP 디렉토리 볼륨
         - ./crypto-config/peerOrganizations/org3.data-collector.com/peers/peer1.org3.data-collector.com/tls:/etc/hyperledger/fabric/tls # TLS 디렉토리 볼륨
         - peer1.org3.data-collector.com:/var/hyperledger/production # peer1 데이터 볼륨
@@ -251,16 +267,18 @@ services:  # Docker Compose의 서비스 정의 시작
     tty: true
     stdin_open: true
     environment:
+      - CORE_VM_ENDPOINT=tcp://host.docker.internal:2375
       - GOPATH=/opt/gopath
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+    # - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock # Docker 데몬 소켓 파일 경로 설정
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.org1.data-collector.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/msp/users/Admin@org1.data-collector.com/tls/ca.crt
-      #- CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/crypto-config/peerOrganizations/org1.data-collector.com/peers/peer0.org1.data-collector.com/tls/ca.crt
+    # - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/crypto-config/peerOrganizations/org1.data-collector.com/peers/peer0.org1.data-collector.com/tls/ca.crt
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp/users/Admin@org1.data-collector.com/msp
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_basic # 네트워크 모드 설정
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
